tests/errors/import_missing.lq
import "questo_modulo_non_esiste.lq"
